[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Solve a logic puzzle game."
homepage = "https://github.com/SaitoTsutomu/solve-logic"
license = "MIT"
name = "solve-logic"
readme = "README.md"
version = "0.1.3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Pillow = "^9.0.1"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
numpy = "^1.22.2"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
solve-logic = "solve_logic:main"
